# libnss-dbng

./: .gitignore  Makefile.am  README  configure.ac
check/: Makefile.am  test_dbngctl.sh.in  test_group_service.c  test_nss_group.c  test_nss_passwd.c  test_nss_shadow.c  test_passwd_service.c  test_service  test_service.c  test_shadow_service.c
dbngctl/: Makefile.am  dbngctl.c
doc/: Makefile.am  dbngctl.8  dbngctl.8.html  dbngctl.8.md
ext/DBNG-Service/: Changes  MANIFEST  MANIFEST.bak  Makefile.PL  README  Service.xs  typemap  utils.c  utils.h
ext/DBNG-Service/lib/DBNG/: Service.pm
ext/DBNG-Service/lib/DBNG/Service/: Group.pm  Passwd.pm  Shadow.pm
ext/DBNG-Service/t/: group.t  passwd.t  shadow.t
lib/: Makefile.am  dbng.c  dbng.h  nss-dbng.h  service-group.c  service-group.h  service-passwd.c  service-passwd.h  service-shadow.c  service-shadow.h  service.c  service.h  utils.c
lib/dbng/: dbng.h  service.h  utils.h
nss/: Makefile.am  group.c  nss-dbng.h  passwd.c  shadow.c
pkg/: libnss-dbng.spec  perl-DBNG-Service.spec
